--- a/chord/index2.html
+++ b/chord/index2.html
@@ -187,7 +187,7 @@
         y: 0,
         width: boxw,
         height: height,
-        fill: "white"
+        fill: d3.rgb(247, 247, 247)
       });
   }
 
@@ -919,7 +919,7 @@
   }
   
   var throttleTimer;
-  
+
   function throttle() {
     window.clearTimeout(throttleTimer);
      throttleTimer = window.setTimeout(function() {
