--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             </div>
     	</div>
  -->
-<iframe src="http://dmilad.github.io/" width="100%" height="700" frameborder="0" scrolling="no"></iframe>
+<iframe src="http://dmilad.github.io/search/" width="100%" height="700" frameborder="0" scrolling="no"></iframe>
 
 
 </div>
