--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <div class="team-member">
                         <img src="img/team/3.png" class="img-responsive img-circle" alt="">
                         <h4>Kelsey Clubb</h4><br />
-                        <p class="text-muted">Data Science graduate student at UC Berkeley and Astronomy Research Associate at UC Berkeley.</p><br />
+                        <p class="text-muted">Data Science graduate student at UC Berkeley and Astronomy Research Associate at UC Berkeley</p><br />
                         <ul class="list-inline social-buttons">
                             <li><a href="http://linkedin.com/in/kelseyclubb"><i class="fa fa-linkedin"></i></a>
                             </li>
@@ -291,13 +291,15 @@
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
                         <h4>Milad Davaloo</h4><br />
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p><br />
+                        <p class="text-muted">Data Science graduate student at UC Berkeley and Market Intelligence Analyst at Autodesk</p><br />
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="http://linkedin.com/in/dmilad"><i class="fa fa-linkedin"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-github"></i></a>
+                            <li><a href="http://twitter.com/dmilad"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-envelope"></i></a>
+                            <li><a href="http://github.com/dmilad"><i class="fa fa-github"></i></a>
+                            </li>
+                            <li><a href="mailto:dmilad@ischool.berkeley.edu"><i class="fa fa-envelope"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -306,13 +308,13 @@
                     <div class="team-member">
                         <img src="img/team/1.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Danny Wudka</h4><br />
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p><br />
+                        <p class="text-muted">Data Science graduate student at UC Berkeley and Business Systems Analyst at William and Sonoma</p><br />
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="http://linkedin.com/in/dwudka"><i class="fa fa-linkedin"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-github"></i></a>
+                            <li><a href="http://github.com/dwudka"><i class="fa fa-github"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-envelope"></i></a>
+                            <li><a href="mailto:dwudka@ischool.berkeley.edu"><i class="fa fa-envelope"></i></a>
                             </li>
                         </ul>
                     </div>
