--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Source</h4>
-                    <p class="text-muted">Twitter streaming API. Sample of tweets from July 7, 2014 through August ?, 2014.</p>
+                    <p class="text-muted">Twitter streaming API. Sample of tweets from July 7, 2014 through July 27, 2014.<br />~15 million tweets (50GB of data)</p>
                 </div>
             </div>
             
@@ -231,7 +231,7 @@
             </div>
  -->
     	</div>
-    	<p id="explore"></p>
+ <!--   	<p id="explore"></p> -->
 <iframe src="http://dmilad.github.io/chord/index2.html" width="100%" height="800" frameborder="0" scrolling="no"></iframe>
 </div>
 </div>
@@ -308,7 +308,7 @@
                     <div class="team-member">
                         <img src="img/team/1.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Danny Wudka</h4><br />
-                        <p class="text-muted">Data Science graduate student at UC Berkeley and Business Systems Analyst at William and Sonoma</p><br />
+                        <p class="text-muted">Data Science graduate student at UC Berkeley and Business Systems Analyst at Williams-Sonoma</p><br />
                         <ul class="list-inline social-buttons">
                             <li><a href="http://linkedin.com/in/dwudka"><i class="fa fa-linkedin"></i></a>
                             </li>
