--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <div class="team-member">
                         <img src="img/team/1.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Danny Wudka</h4><br />
-                        <p class="text-muted">Data Science graduate student at UC Berkeley and Business Systems Analyst at William and Sonoma</p><br />
+                        <p class="text-muted">Data Science graduate student at UC Berkeley and Business Systems Analyst at Williams-Sonoma, Inc.</p><br />
                         <ul class="list-inline social-buttons">
                             <li><a href="http://linkedin.com/in/dwudka"><i class="fa fa-linkedin"></i></a>
                             </li>
