--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-wrench-o fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Tools</h4>
                     <p class="text-muted">Visualization: Tableau, d3.js<br />Storage and Retrieval: AWS, Apache Solr<br />Data Gathering and Cleansing: Python</p>
