Added github link for Kelsey

--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@
                             </li>
                             <li><a href="http://twitter.com/Kelsey_clubb"><i class="fa fa-twitter"></i></a>
                             </li>
+                            <li><a href="http://github.com/kelseyclubb"><i class="fa fa-github"></i></a>
+                            </li>
                             <li><a href="mailto:kclubb@ischool.berkeley.edu"><i class="fa fa-envelope"></i></a>
                             </li>
                         </ul>
