Added image credit

--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@
                 <p class="text-muted"><br />Project for <a href="http://www.ischool.berkeley.edu/courses/datasci205">Data Science W205</a> and <a href="http://www.ischool.berkeley.edu/courses/datasci209">Data Science W209</a>, Summer 2014, <a href="http://www.ischool.berkeley.edu/">UC Berkeley School of Information</a></p>
                 <br />
             </div>
+            <div class="row text-center">
+                <br />
+                <p class="text-muted"><br />Image Credit: <a href="http://davidozz.deviantart.com/art/manhattan-empire-state-building-292895276">DaviDozz</a></p>
+                <br />
+            </div>
         </div>
     </section>
 
