Modified spacing around image credit

--- a/index.html
+++ b/index.html
@@ -300,8 +300,7 @@
             </div>
             <div class="row text-center">
                 <br />
-                <p class="text-muted"><br />Image Credit: <a href="http://davidozz.deviantart.com/art/manhattan-empire-state-building-292895276">DaviDozz</a></p>
-                <br />
+                <p class="text-muted">Image Credit: <a href="http://davidozz.deviantart.com/art/manhattan-empire-state-building-292895276">DaviDozz</a></p>
             </div>
         </div>
     </section>
