optimize js load

--- a/search.html
+++ b/search.html
@@ -8,30 +8,10 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700' rel='stylesheet' type='text/css'>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/themes/smoothness/jquery-ui.css">
-  <script src="js/ChattyCitySolr.js"></script>
-  <script src="js/Autolinker.min.js"></script>
-  <script src="js/Moment.min.js"></script>
-  <script src="js/tipped.js"></script>
-  <script src="js/imagesloaded.pkgd.min.js"></script>
   <link rel="stylesheet" href="css/tipped.css"/>
-  <script src="core/Core.js"></script>
-  <script src="core/AbstractManager.js"></script>
-  <script src="managers/Manager.jquery.js"></script>
-  <script src="core/Parameter.js"></script>
-  <script src="core/ParameterStore.js"></script>
-  <script src="core/AbstractWidget.js"></script>
-  <script src="widgets/ResultWidget.js"></script>
-  <script src="widgets/jquery/PagerWidget.js"></script>
-  <script src="core/AbstractFacetWidget.js"></script>
-  <script src="widgets/TagcloudWidget.js"></script>
-  <script src="widgets/CurrentSearchWidget.js"></script>
-  <script src="core/AbstractTextWidget.js"></script>
-  <script src="widgets/AutocompleteWidget.js"></script>
-  <script src="widgets/CalendarWidget.js"></script>  
-  <script src="widgets/SentimentGroupWidget.js"></script>  
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/themes/smoothness/jquery-ui.css">
+
+
 </head>
 <body>
 
@@ -80,5 +60,28 @@
     </div>
     <div class="clear"></div>
   </div>
+  
+  <script src="core/Core.js"></script>
+  <script src="core/AbstractManager.js"></script>
+  <script src="managers/Manager.jquery.js"></script>
+  <script src="core/Parameter.js"></script>
+  <script src="core/ParameterStore.js"></script>
+  <script src="core/AbstractWidget.js"></script>
+  <script src="widgets/ResultWidget.js"></script>
+  <script src="widgets/jquery/PagerWidget.js"></script>
+  <script src="core/AbstractFacetWidget.js"></script>
+  <script src="widgets/TagcloudWidget.js"></script>
+  <script src="widgets/CurrentSearchWidget.js"></script>
+  <script src="core/AbstractTextWidget.js"></script>
+  <script src="widgets/AutocompleteWidget.js"></script>
+  <script src="widgets/CalendarWidget.js"></script>  
+  <script src="widgets/SentimentGroupWidget.js"></script>  
+  <script src="js/jquery-1.7.2.min.js"></script>
+  <script src="js/jquery-1.8.34.min.js"></script>
+  <script src="js/ChattyCitySolr.js"></script>
+  <script src="js/Autolinker.min.js"></script>
+  <script src="js/Moment.min.js"></script>
+  <script src="js/tipped.js"></script>
+  <script src="js/imagesloaded.pkgd.min.js"></script>
 </body>
 </html>
