--- a/search.html
+++ b/search.html
@@ -9,8 +9,9 @@
   <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/tipped.css"/>
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/themes/smoothness/jquery-ui.css">
 
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/themes/smoothness/jquery-ui.css">
+  
 
 </head>
 <body>
@@ -61,6 +62,8 @@
     <div class="clear"></div>
   </div>
   
+  <script src="js/jquery-1.7.2.min.js"></script>
+  <script src="js/jquery-ui-1.8.34.min.js"></script>
   <script src="core/Core.js"></script>
   <script src="core/AbstractManager.js"></script>
   <script src="managers/Manager.jquery.js"></script>
@@ -76,12 +79,11 @@
   <script src="widgets/AutocompleteWidget.js"></script>
   <script src="widgets/CalendarWidget.js"></script>  
   <script src="widgets/SentimentGroupWidget.js"></script>  
-  <script src="js/jquery-1.7.2.min.js"></script>
-  <script src="js/jquery-1.8.34.min.js"></script>
   <script src="js/ChattyCitySolr.js"></script>
   <script src="js/Autolinker.min.js"></script>
   <script src="js/Moment.min.js"></script>
   <script src="js/tipped.js"></script>
   <script src="js/imagesloaded.pkgd.min.js"></script>
+
 </body>
 </html>
