--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Project Concept</h4>
-                    <p class="text-muted">We recorded what 100 major US cities said about each other over a span of 3 weeks on Twitter. This project is an overview of interesting findings from our exploration of this data.</p>
+                    <p class="text-muted">We recorded what 100 major US cities said about each other over a span of 3 weeks on Twitter. <br />This project is an overview of interesting findings from our exploration of this data.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -157,7 +157,7 @@
                         <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Tools</h4>
-                    <p class="text-muted">Visualization: Tableau, d3.js<br />Storage and Retrieval: AWS, Apache Solr<br />Data Gathering and Cleansing: Python</p>
+                    <p class="text-muted">Data Gathering and Cleansing: Python<br />Storage and Retrieval: AWS, Apache Solr<br />Data Visualization: Tableau, d3.js</p>
                 </div>
             </div>
             <div class="row text-center">
