minor text additions

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Tools</h4>
+                    <h4 class="service-heading">Tools Used</h4>
                     <p class="text-muted">Data Gathering and Cleansing: Python<br />Storage and Retrieval: AWS, Apache Solr<br />Data Visualization: Tableau, d3.js</p>
                 </div>
             </div>
@@ -178,7 +178,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">What We've Learned</h2>
-                    <h3 class="section-subheading text-muted">A guided tour of interesting findings.</h3>
+                    <h3 class="section-subheading text-muted">A guided tour of interesting findings from the tweets we collected about US cities.</h3>
                 </div>
             </div>
             <div class="container">
