--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </div>
             <div class="row text-center">
                 <br />
-                <p class="text-muted">Image Credit: <a href="http://davidozz.deviantart.com/art/manhattan-empire-state-building-292895276">DaviDozz</a></p>
+                <p class="text-muted">Image Credit: <a href="http://davidozz.deviantart.com/art/manhattan-empire-state-building-292895276">DaviDozz</a>, Website Template: <a href="http://startbootstrap.com/template-overviews/agency/">Agency</a> by <a href="http://startbootstrap.com/">Start Bootstrap</a></p>
             </div>
         </div>
     </section>
