--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About This Project</h2>
-                    <h3 class="section-subheading text-muted">Storing, retrieving, visualizing, and communicating data.<br /><br /></h3>
+                    <h3 class="section-subheading text-muted">ChattyCity was designed and developed as a project to store, retrieve, visualize, and communicate data.<br />Our project concept was to look at tweet sentiment (a general feeling or emotion, usually broken down as positive, negative, or neutral) based on tweeter's location (source) and where they are tweeting about (destination). We hypothesized that there is a bias for or against certain cities based on where the tweeter is from. For example, most residents in Seattle might have a positive sentiment about San Francisco, but residents of Los Angeles might generally have a negative sentiment toward San Francisco.<br />We wanted to create an interface to allow a user to search our collection of tweets and to be able to answer questions from our data such as “which cities have positive sentiment toward San Francisco?” and “Does time of day and/or day of week influence sentiment?”.<br /><br /></h3>
                 </div>
             </div>
             
